data/forge_javadoc/1.7.10/raw/net/minecraft/realms/RealmsScrolledSelectionList.md
---
title: "RealmsScrolledSelectionList"
description: "public class RealmsScrolledSelectionList extends java.lang.Object"
package: "net/minecraft/realms"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/realms/RealmsScrolledSelectionList.html"
sourceType: javadoc
---

# RealmsScrolledSelectionList

**Inheritance:** java.lang.Object → net.minecraft.realms.RealmsScrolledSelectionList

## Class signature

```java
public class RealmsScrolledSelectionList extends java.lang.Object
```

## Constructors

- `RealmsScrolledSelectionList(int p_i1119_1_, int p_i1119_2_, int p_i1119_3_, int p_i1119_4_, int p_i1119_5_)`

## Methods

- `int getItemCount()`
- `int getMaxPosition()`
- `int getScrollbarPosition()`
- `boolean isSelectedItem(int p_isSelectedItem_1_)`
- `void render(int p_render_1_, int p_render_2_, float p_render_3_)`
- `void renderBackground()`
- `void renderItem(int p_renderItem_1_, int p_renderItem_2_, int p_renderItem_3_, int p_renderItem_4_, int p_renderItem_5_, int p_renderItem_6_)`
- `protected void renderItem(int p_renderItem_1_, int p_renderItem_2_, int p_renderItem_3_, int p_renderItem_4_, Tezzelator p_renderItem_5_, int p_renderItem_6_, int p_renderItem_7_)`
- `void selectItem(int p_selectItem_1_, boolean p_selectItem_2_, int p_selectItem_3_, int p_selectItem_4_)`
- `int width()`
- `int xm()`
- `int ym()`
