data/forge_javadoc/1.8.9/raw/net/minecraft/realms/RealmsScrolledSelectionList.md
---
title: "RealmsScrolledSelectionList"
description: "public class RealmsScrolledSelectionList extends java.lang.Object"
package: "net/minecraft/realms"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/realms/RealmsScrolledSelectionList.html"
sourceType: javadoc
---

# RealmsScrolledSelectionList

**Inheritance:** java.lang.Object → net.minecraft.realms.RealmsScrolledSelectionList

## Class signature

```java
public class RealmsScrolledSelectionList extends java.lang.Object
```

## Constructors

- `RealmsScrolledSelectionList(int p_i1119_1_, int p_i1119_2_, int p_i1119_3_, int p_i1119_4_, int p_i1119_5_)`

## Methods

- `int getItemCount()`
- `int getMaxPosition()`
- `int getScroll()`
- `int getScrollbarPosition()`
- `boolean isSelectedItem(int p_isSelectedItem_1_)`
- `void mouseEvent()`
- `void render(int p_render_1_, int p_render_2_, float p_render_3_)`
- `void renderBackground()`
- `void renderItem(int p_renderItem_1_, int p_renderItem_2_, int p_renderItem_3_, int p_renderItem_4_, int p_renderItem_5_, int p_renderItem_6_)`
- `protected void renderItem(int p_renderItem_1_, int p_renderItem_2_, int p_renderItem_3_, int p_renderItem_4_, Tezzelator p_renderItem_5_, int p_renderItem_6_, int p_renderItem_7_)`
- `protected void renderList(int p_renderList_1_, int p_renderList_2_, int p_renderList_3_, int p_renderList_4_)`
- `void scroll(int p_scroll_1_)`
- `void selectItem(int p_selectItem_1_, boolean p_selectItem_2_, int p_selectItem_3_, int p_selectItem_4_)`
- `int width()`
- `int xm()`
- `int ym()`
